--- a/frontend/index.html
+++ b/frontend/index.html
@@ -186,7 +186,7 @@
         </form>
     </div>
 
-	<h1>WWWWW</h1>
+	<h1>HHHHH</h1>
     <div id="search"> 
         <div id="container1"> 
             <input type="text" id="searchin" placeholder="Search..."/> 
